--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,19 @@
-<footer class="footer">
-    <h3>Gfrio - O melhor para seu negocio <span>&copy; Todo os direitos reservados.</span></h3>
-    <p>
+
+<footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-2 mb-2">
+        <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">
+                &#xF437;
+            </a>
+        </li>
+        
+    </ul>
+    <p class="text-center text-body-secondary mb-1"> Gfrio - O melhor para seu negocio, 
+        <span>
+            &copy;Todo os direitos reservados.
+        </span>
+    </p>
+    <p class="text-center text-body-secondary">
         Desenvolvido por <a href="">Roberto Vinicius</a>
     </p>
-
-  </footer>
+</footer>
