--- a/src/app/components/pages/servico/servico.component.html
+++ b/src/app/components/pages/servico/servico.component.html
@@ -1,1 +1,6 @@
-<p>servico works!</p>
+<div id="servicos">
+  <h1>Nossos Serviçoes</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum adipisci repellat dolor ut quaerat distinctio enim ipsam voluptates, officia repudiandae mollitia magnam nulla beatae a corporis quidem facilis explicabo nihil!
+  </p>
+</div>
