--- a/src/app/components/pages/sobre/sobre.component.html
+++ b/src/app/components/pages/sobre/sobre.component.html
@@ -1,1 +1,4 @@
-<p>sobre works!</p>
+<div id="sobre">
+  <h1>Sobre Nossa Empresa</h1>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At voluptates, odio ratione labore minima reprehenderit officia nemo esse hic repellendus cupiditate fugiat omnis placeat ipsam obcaecati consequuntur ab quam soluta.</p>
+</div>
