--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,31 @@
 
-<footer class="py-3 my-4">
+<footer class="py-3 my-4 navbar-fixed-bottom">
     <ul class="nav justify-content-center border-bottom pb-2 mb-2">
         <li class="nav-item">
             <a href="#" class="nav-link px-2 text-body-secondary">
-                &#xF437;
+                <i class="bi bi-instagram icon"></i>
             </a>
         </li>
-        
+        <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">
+                <i class="bi bi-facebook icon"></i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">
+                <i class="bi bi-instagram icon"></i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">
+                <i class="bi bi-whatsapp icon"></i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link px-2 text-body-secondary">
+                <i class="bi bi-envelope-fill icon"></i>
+            </a>
+        </li>
     </ul>
     <p class="text-center text-body-secondary mb-1"> Gfrio - O melhor para seu negocio, 
         <span>
