--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,2 +1,6 @@
-<app-servico></app-servico>
-<app-sobre></app-sobre>
+<div class="containerHome">
+    <app-servico class="servico"></app-servico>
+    <app-sobre class="sobre"></app-sobre>
+    <app-clientes class="clientes"></app-clientes>
+    <app-form-contato class="form"></app-form-contato>
+</div>
