--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,6 +1,9 @@
-<div class="containerHome">
-    <app-servico class="servico"></app-servico>
-    <app-sobre class="sobre"></app-sobre>
-    <app-clientes class="clientes"></app-clientes>
-    <app-form-contato class="form"></app-form-contato>
+<div id="home" class="parallax position-relative d-flex justify-content-center align-items-center">
+    <div class="parallax-text text-center text-cyan">
+        <h1 class="parallax-title">GFRIO REFRIGERAÇÃO COMERCIAL</h1>
+        <p class="parallax-subtitle">
+            Especializada na instalação e manutenção de 
+            sistemas centrais de ar condicionado, ventilação e refrigeração.
+        </p>
+    </div>
 </div>
