--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,14 @@
 <footer class="py-3 my-4 al-center align-bottom">
-    <div class="info d-flex justify-content-around">
-        <h3>Endereço</h3>
-
-        <ul class="nav pb-2 mb-2">
+    <div class="info d-flex flex-column flex-md-row justify-content-around text-center text-md-start">
+        <div class="endereço mb-3 mb-md-0">
+            <h3>Endereço</h3>
+            <p>Rua Saara, 122b - Cidade da Esperança,<br>Natal - RN, 59070-060</p>
+        </div>
+        <div class="horario mb-3 mb-md-0">
+            <h3>Horário</h3>
+            <p>Funcionamento de seg a sex 7:30-17:00</p>
+        </div>
+        <ul class="nav pb-2 mb-2 justify-content-center">
             <li class="nav-item">
                 <a href="#" class="nav-link px-2 text-body-secondary">
                     <i class="bi bi-instagram icon"></i>
@@ -30,6 +36,7 @@
             </li>
         </ul>
     </div>
+    
     <p class="text-center text-body-secondary mb-0"> Gfrio - O melhor para seu negocio, 
         <span>
             &copy;Todo os direitos reservados.
