--- a/src/app/components/pages/servico/servico.component.html
+++ b/src/app/components/pages/servico/servico.component.html
@@ -1,6 +1,34 @@
-<div id="servicos">
-  <h1>Nossos Serviçoes</h1>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum adipisci repellat dolor ut quaerat distinctio enim ipsam voluptates, officia repudiandae mollitia magnam nulla beatae a corporis quidem facilis explicabo nihil!
-  </p>
-</div>
+<div id="servicos" class="services py-5">
+    <div class="container">
+      <h1 class="text-center mb-4">Nossos Serviços</h1>
+      <div class="row">
+        <div class="col-md-4 text-center mb-4">
+          <div class="mb-3">
+            <img src="assets/ilustrativa.png" alt="Instalação" class="img-fluid rounded-circle">
+        </div>
+          <h4>Instalação de Sistemas de Ar Condicionado</h4>
+          <p>Oferecemos instalação completa de sistemas centrais de ar condicionado para empresas e indústrias, garantindo eficiência e conforto.</p>
+        </div>
+        <div class="col-md-4 text-center mb-4">
+          <div class="mb-3">
+            <img src="assets/ilustrativa.png" alt="Instalação" class="img-fluid rounded-circle">
+        </div>
+          <h4>Manutenção Preventiva e Corretiva</h4>
+          <p>Serviços de manutenção preventiva e corretiva para garantir o funcionamento contínuo e eficiente dos seus sistemas de refrigeração.</p>
+        </div>
+        <div class="col-md-4 text-center mb-4">
+          <div class="mb-3">
+            <img src="assets/ilustrativa.png" alt="Instalação" class="img-fluid rounded-circle">
+        </div>
+          <h4>Sistemas de Ventilação e Exaustão</h4>
+          <p>Instalação e manutenção de sistemas de ventilação e exaustão para melhorar a qualidade do ar em ambientes comerciais e industriais.</p>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <a href="#" target="_blank">
+          <button type="button" class="btn btn-outline-light">Solicitar Orçamento</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  
