--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -37,12 +37,14 @@
         </ul>
     </div>
     
-    <p class="text-center text-body-secondary mb-0"> Gfrio - O melhor para seu negocio, 
-        <span>
-            &copy;Todo os direitos reservados.
-        </span>
-    </p>
-    <p class="text-center text-body-secondary">
-        Desenvolvido por <a href="">Roberto Vinicius</a>
-    </p>
+    <div class="text-white">
+        <p class="text-center text-body-secondary mb-0"> Gfrio - O melhor para seu negocio,
+            <span>
+                &copy;Todo os direitos reservados.
+            </span>
+        </p>
+        <p class="text-center text-body-secondary">
+            Desenvolvido por <a href="">Roberto Vinicius</a>
+        </p>
+    </div>
 </footer>
