--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,8 +10,13 @@
     color: #F56300;
 }
 
-.bi {
-    font-size: 30px;
+img {
+    width: 120px;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    object-position: center;
 }
 
 .navbar-nav, .navbar-toggler{
