--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top" alt="Gfrio">
     <a class="navbar-brand" routerLink="/" routerLinkActive="active">
-        <i class="bi bi-snow2"></i>
-        <p class="mb-0 ms-1">Gfrio</p>     
+        <img src="assets/logo.jpg" alt="GFRIO Refrigeration Logo">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
