clientes, sobre, form

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="py-3 my-4 al-center align-bottom">
-    <div class="info d-flex flex-column flex-md-row justify-content-around text-center text-md-start">
+    <div class="info d-flex flex-column flex-md-row justify-content-around text-center text-md-start mb-4">
         <div class="endereço mb-3 mb-md-0">
             <h3>Endereço</h3>
             <p>Rua Saara, 122b - Cidade da Esperança,<br>Natal - RN, 59070-060</p>
@@ -37,7 +37,7 @@
         </ul>
     </div>
     
-    <div class="text-white">
+    <div class="direitos">
         <p class="text-center text-body-secondary mb-0"> Gfrio - O melhor para seu negocio,
             <span>
                 &copy;Todo os direitos reservados.
