--- a/src/app/components/form-contato/form-contato.component.html
+++ b/src/app/components/form-contato/form-contato.component.html
@@ -1,1 +1,26 @@
-<h1>Fale Conosco</h1>
+<div class="formulario-container">
+  <div class="formulario">
+    <h1>Fale Conosco</h1>
+    <form class="row g-4">
+      <div class="col-md-4">
+        <label for="name" class="form-label">Nome</label>
+        <input type="text" class="form-control" id="name" placeholder="Nome">
+      </div>
+      <div class="col-md-4">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="Email">
+      </div>
+      <div class="col-md-4">
+        <label for="contato" class="form-label">Contato</label>
+        <input type="tel" class="form-control" id="contato" placeholder="Telefone">
+      </div>
+      <div class="col-12">
+        <label for="mensagem" class="form-label text-align-start">Mensagem</label>
+        <textarea class="form-control" id="mensagem" rows="5" placeholder="Sua mensagem"></textarea>
+      </div>
+      <div class="botao">
+        <button type="submit" class="btn btn-primary align-items-center w-50">Enviar</button>
+      </div>
+    </form>
+  </div>
+</div>
