--- a/src/app/components/pages/sobre/sobre.component.html
+++ b/src/app/components/pages/sobre/sobre.component.html
@@ -1,4 +1,7 @@
-<div id="sobre">
-  <h1>Sobre Nossa Empresa</h1>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At voluptates, odio ratione labore minima reprehenderit officia nemo esse hic repellendus cupiditate fugiat omnis placeat ipsam obcaecati consequuntur ab quam soluta.</p>
+<div id="sobre" class="d-flex">
+  <div class="d-flex info">
+    <img src="assets/logo.jpg" alt="Logo da Gfrio" class="logo">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam nobis dolor cupiditate quis inventore ea porro nostrum placeat, recusandae quas, pariatur asperiores sunt ratione. Maiores doloribus id vitae iure delectus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque provident facere voluptatum qui, ratione magnam, quisquam temporibus suscipit maiores excepturi pariatur accusantium quidem quos natus mollitia beatae similique? Voluptate, dolorum!</p>
+  </div>
+  <img src="assets/tecnicoS.png" alt="Tecnico em refrigeração" class="tec">
 </div>
