--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,5 +4,11 @@
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline;font-family: Arial, Helvetica, sans-serif;
+    vertical-align: baseline;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Defina explicitamente a largura para os elementos necessários */
+.containerPages {
+    width: 100vw; /* Para garantir que ocupa toda a viewport */
 }
