--- a/src/app/components/pages/full-pages/full-pages.component.css
+++ b/src/app/components/pages/full-pages/full-pages.component.css
@@ -2,22 +2,14 @@
     display: flex;
     text-align: center;
     flex-direction: column;
-    width: 95vw;
+    width: 99vw;
     height: 100%;
+    padding-top: 60px;
+    overflow-x: hidden;
 }
 
-.servico {
-
-}
-
-.sobre {
-
-}
-
-.clientes {
-
-}
-
-.form {
-
+@media (max-width: 768px) {
+    .containerPages {
+        width: 99vw;
+    }
 }
