--- a/src/app/components/pages/servico/servico.component.html
+++ b/src/app/components/pages/servico/servico.component.html
@@ -1,34 +1,50 @@
 <div id="servicos" class="services py-5">
-    <div class="container">
-      <h1 class="text-center mb-4">Nossos Serviços</h1>
-      <div class="row">
-        <div class="col-md-4 text-center mb-4">
+  <div class="container">
+    <h1 class="text-center mb-4">NOSSOS SERVIÇOS</h1>
+    <div class="row">
+      <div class="col-md-4 text-center mb-4">
+        <div class="card p-4">
+          <h4 class="card-title">Instalação e Manutenção</h4>
           <div class="mb-3">
-            <img src="assets/ilustrativa.png" alt="Instalação" class="img-fluid rounded-circle">
-        </div>
-          <h4>Instalação de Sistemas de Ar Condicionado</h4>
-          <p>Oferecemos instalação completa de sistemas centrais de ar condicionado para empresas e indústrias, garantindo eficiência e conforto.</p>
-        </div>
-        <div class="col-md-4 text-center mb-4">
-          <div class="mb-3">
-            <img src="assets/ilustrativa.png" alt="Instalação" class="img-fluid rounded-circle">
-        </div>
-          <h4>Manutenção Preventiva e Corretiva</h4>
-          <p>Serviços de manutenção preventiva e corretiva para garantir o funcionamento contínuo e eficiente dos seus sistemas de refrigeração.</p>
-        </div>
-        <div class="col-md-4 text-center mb-4">
-          <div class="mb-3">
-            <img src="assets/ilustrativa.png" alt="Instalação" class="img-fluid rounded-circle">
-        </div>
-          <h4>Sistemas de Ventilação e Exaustão</h4>
-          <p>Instalação e manutenção de sistemas de ventilação e exaustão para melhorar a qualidade do ar em ambientes comerciais e industriais.</p>
+            <img src="assets/reparo.jpeg" alt="Instalação e Manutenção" class="img-fluid rounded-circle">
+          </div>
+          <ul class="list-unstyled">
+            <li>Instalação de câmaras frigoríficas (painéis de poliuretano, túnel de congelamento).</li>
+            <li>Montagem de infraestrutura e unidades condensadoras (resfriado e congelado).</li>
+            <li>Manutenção preventiva e corretiva de racks, unidades evaporadoras, compressores (aberto/semi-hermético), chillers e centrais de água gelada.</li>
+          </ul>
         </div>
       </div>
-      <div class="text-center mt-4">
-        <a href="#" target="_blank">
-          <button type="button" class="btn btn-outline-light">Solicitar Orçamento</button>
-        </a>
+      <div class="col-md-4 text-center mb-4">
+        <div class="card p-4">
+          <h4 class="card-title">Consultoria, Assessoria e Projetos</h4>
+          <div class="mb-3">
+            <img src="assets/projeto.jpg" alt="Consultoria, Assessoria e Projeto" class="img-fluid rounded-circle">
+          </div>
+          <ul class="list-unstyled">
+            <li>Consultoria, assessoria e supervisão técnica em sistemas de refrigeração e climatização.</li>
+            <li>Desenvolvimento de projetos para câmaras frigoríficas, salas limpas e sistemas de climatização (VRF).</li>            
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-4 text-center mb-4">
+        <div class="card p-4">
+          <h4 class="card-title">Soluções Personalizadas</h4>
+          <div class="mb-3">
+            <img src="assets/solucao.jpeg" alt="Soluções Personalizadas" class="img-fluid rounded-circle">
+          </div>
+          <ul class="list-unstyled">
+            <li>Montagem e instalação de sistemas VRF.</li>
+            <li>Manutenção preventiva e corretiva em salas limpas e sistemas VRF.</li>
+            <li>Soluções eficientes e sustentáveis, adaptadas às necessidades específicas de cada cliente.</li>
+          </ul>
+        </div>
       </div>
     </div>
+    <div class="text-center mt-4">
+      <a href="https://api.whatsapp.com/send/?phone=5584987739886&text&type=phone_number&app_absent=0" target="_blank">
+        <button type="button" class="btn btn-outline-light">Solicitar Orçamento</button>
+      </a>
+    </div>
   </div>
-  
+</div>
