--- a/src/app/components/pages/sobre/sobre.component.html
+++ b/src/app/components/pages/sobre/sobre.component.html
@@ -1,7 +1,14 @@
-<div id="sobre" class="d-flex">
-  <div class="d-flex info">
-    <img src="assets/logo.jpg" alt="Logo da Gfrio" class="logo">
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam nobis dolor cupiditate quis inventore ea porro nostrum placeat, recusandae quas, pariatur asperiores sunt ratione. Maiores doloribus id vitae iure delectus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque provident facere voluptatum qui, ratione magnam, quisquam temporibus suscipit maiores excepturi pariatur accusantium quidem quos natus mollitia beatae similique? Voluptate, dolorum!</p>
-  </div>
-  <img src="assets/tecnicoS.png" alt="Tecnico em refrigeração" class="tec">
+<div id="sobre" class="container-fluid d-flex flex-column flex-lg-row align-items-center">
+  <div class="info col-lg-6 px-4">
+    <img src="assets/logo.jpg" alt="Logo da Gfrio" class="logo mb-4 img-fluid">
+    <p>
+      Fundada por um jovem técnico especializado no segmento de refrigeração, conseguindo realizar um grande sonho. A empresa se destaca pela qualidade dos seus serviços e pelo comprometimento com os seus clientes. Com experiência na área de refrigeração, o fundador da GFRIO percebeu a necessidade de oferecer um serviço diferenciado.
+    </p>
+    <p>
+      A nossa equipe técnica é formada por profissionais habilitados e extremamente capacitados através dos fabricantes de equipamentos que atuamos em nosso segmento, estamos sempre buscando aprimoramento e atualizações referente a novas tecnologias do setor de refrigeração e climatização, buscando soluções eficientes e personalizadas para cada cliente.
+    </p>
+    <p>
+      A empresa oferece serviços de projetos, instalação e manutenção em equipamentos residenciais, comerciais e industriais, atendendo ao mercado de refrigeração, climatização, ventilação, exaustão e hospitalar, com qualidade e pronto atendimento.
+    </p>
+  </div>  
 </div>
