--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Helvetica, sans-serif;
 }
 
 /* Defina explicitamente a largura para os elementos necessários */
