--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,40 +1,49 @@
 <footer class="py-3 my-4 al-center align-bottom">
-    <div class="info d-flex flex-column flex-md-row justify-content-around text-center text-md-start mb-4">
-        <div class="endereço mb-3 mb-md-0">
+    <div class="info d-flex flex-column flex-md-row justify-content-around text-center text-md-center mb-4">
+        <div class=" d-flex flex-column endereço mb-3 mb-md-0">
             <h3>Endereço</h3>
             <p>Rua Saara, 122b - Cidade da Esperança,<br>Natal - RN, 59070-060</p>
+            <a href="https://maps.app.goo.gl/W1hRy1Txzoj5oMkG8" target="_blank" class="text-decoration-none">
+                <button type="button" class="btn btn-outline-dark">
+                    <i class="bi bi-geo-alt me-2 loc"></i>
+                    Como chegar até nós
+                </button>
+            </a>            
         </div>
         <div class="horario mb-3 mb-md-0">
             <h3>Horário</h3>
             <p>Funcionamento de seg a sex 7:30-17:00</p>
         </div>
-        <ul class="nav pb-2 mb-2 justify-content-center">
-            <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-body-secondary">
-                    <i class="bi bi-instagram icon"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-body-secondary">
-                    <i class="bi bi-facebook icon"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-body-secondary">
-                    <i class="bi bi-instagram icon"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-body-secondary">
-                    <i class="bi bi-whatsapp icon"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-body-secondary">
-                    <i class="bi bi-envelope-fill icon"></i>
-                </a>
-            </li>
-        </ul>
+        <div>
+            <h3>Redes Sociais</h3>
+            <ul class="nav pb-2 mb-2 justify-content-center">
+                <li class="nav-item">
+                    <a href="https://www.instagram.com/gfriooficial/" target="_blank" class="nav-link px-2 text-body-secondary">
+                        <i class="bi bi-instagram icon"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" target="_blank" class="nav-link px-2 text-body-secondary">
+                        <i class="bi bi-facebook icon"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://maps.app.goo.gl/W1hRy1Txzoj5oMkG8" target="_blank" class="nav-link px-2 text-body-secondary">
+                        <i class="bi bi-geo-alt icon"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://api.whatsapp.com/send/?phone=5584987739886&text&type=phone_number&app_absent=0" target="_blank" class="nav-link px-2 text-body-secondary">
+                        <i class="bi bi-whatsapp icon"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="mailto:diretoria@gfriorefrigeracao.com" target="_blank" class="nav-link px-2 text-body-secondary">
+                        <i class="bi bi-envelope-fill icon"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
     
     <div class="direitos">
@@ -44,7 +53,7 @@
             </span>
         </p>
         <p class="text-center text-body-secondary">
-            Desenvolvido por <a href="">Roberto Vinicius</a>
+            Desenvolvido por <a href="" target="_blank">Roberto Vinicius</a>
         </p>
     </div>
 </footer>
