--- a/src/app/components/pages/sobre/sobre.component.css
+++ b/src/app/components/pages/sobre/sobre.component.css
@@ -1,48 +1,47 @@
 #sobre {
   text-align: center;
-  justify-content: center;
-  height: 90vh;
+  display: flex; /* Adicionado para flexbox */
+  justify-content: center; /* Centraliza o conteúdo horizontalmente */
+  align-items: center; /* Centraliza o conteúdo verticalmente */
+  height: 90vh; /* Altura de 90% da viewport */
   width: 100%;
+  padding: 0 15px; /* Adiciona padding lateral para espaçamento */
 }
 
+/* Estilos para o bloco de informações */
 .info {
-  margin: 40px 0 0 30px;
+  margin: 0; /* Remove margens para alinhamento melhor */
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
-  gap: 10px;
+  text-align: justify; /* Justifica o texto dentro do bloco */
+  gap: 10px; /* Espaçamento entre parágrafos */
 }
 
 .logo {
   margin-bottom: 20px;
   border: 5px solid #F56300; 
-  border-radius: 8px; /* Faz a borda ser circular */
-  object-fit: cover; /* Garante que a imagem mantenha sua proporção dentro do círculo */
+  border-radius: 8px; /* Arredonda os cantos da borda */
+  object-fit: cover; /* Ajusta a imagem dentro do contêiner */
+  max-width: 100%; /* Garante que a imagem não ultrapasse o contêiner */
+  height: auto; /* Mantém a proporção da imagem */
 }
 
-.tec {
-  max-width: 600px;
-  width: 100%;
-}
-
+/* Ajustes para telas menores */
 @media (max-width: 900px) {
   #sobre {
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column; /* Muda a direção do flexbox para coluna */
+    align-items: center; /* Centraliza o conteúdo horizontalmente */
+    height: auto; /* Ajusta a altura para caber no conteúdo */
   }
 
   .info {
-    margin: 20px 0;
-    align-items: center;
-    text-align: center;
+    margin: 20px 0; /* Ajusta a margem superior e inferior */
+    align-items: center; /* Centraliza o conteúdo horizontalmente */
+    text-align: center; /* Centraliza o texto dentro do bloco */
   }
 
   .info p {
-    max-width: 300px;
-  }
-
-  .tec {
-    display: none;
+    max-width: 300px; /* Limita a largura dos parágrafos para telas menores */
   }
 }
