--- a/src/app/components/pages/servico/servico.component.html
+++ b/src/app/components/pages/servico/servico.component.html
@@ -4,10 +4,10 @@
     <div class="row">
       <div class="col-md-4 text-center mb-4">
         <div class="card p-4">
-          <h4 class="card-title">Instalação e Manutenção</h4>
           <div class="mb-3">
-            <img src="assets/reparo.jpeg" alt="Instalação e Manutenção" class="img-fluid rounded-circle">
+            <img src="assets/reparo.jpeg" alt="Instalação e Manutenção" class="img-fluid">
           </div>
+          <h4 class="card-title">Instalação e Manutenção</h4>
           <ul class="list-unstyled">
             <li>Instalação de câmaras frigoríficas (painéis de poliuretano, túnel de congelamento).</li>
             <li>Montagem de infraestrutura e unidades condensadoras (resfriado e congelado).</li>
@@ -17,22 +17,23 @@
       </div>
       <div class="col-md-4 text-center mb-4">
         <div class="card p-4">
-          <h4 class="card-title">Consultoria, Assessoria e Projetos</h4>
           <div class="mb-3">
-            <img src="assets/projeto.jpg" alt="Consultoria, Assessoria e Projeto" class="img-fluid rounded-circle">
+            <img src="assets/projeto.jpg" alt="Consultoria, Assessoria e Projeto" class="img-fluid">
           </div>
+          <h4 class="card-title">Consultoria, Assessoria e Projetos</h4>
           <ul class="list-unstyled">
             <li>Consultoria, assessoria e supervisão técnica em sistemas de refrigeração e climatização.</li>
-            <li>Desenvolvimento de projetos para câmaras frigoríficas, salas limpas e sistemas de climatização (VRF).</li>            
+            <li>Desenvolvimento de projetos para câmaras frigoríficas.</li>  
+            <li>Desenvolvimento de projetos para salas limpas e sistemas de climatização (VRF).</li>           
           </ul>
         </div>
       </div>
       <div class="col-md-4 text-center mb-4">
         <div class="card p-4">
-          <h4 class="card-title">Soluções Personalizadas</h4>
           <div class="mb-3">
-            <img src="assets/solucao.jpeg" alt="Soluções Personalizadas" class="img-fluid rounded-circle">
+            <img src="assets/manutencao.jpeg" alt="Soluções Personalizadas" class="img-fluid">
           </div>
+          <h4 class="card-title">Soluções Personalizadas</h4>
           <ul class="list-unstyled">
             <li>Montagem e instalação de sistemas VRF.</li>
             <li>Manutenção preventiva e corretiva em salas limpas e sistemas VRF.</li>
