--- a/src/app/components/pages/sobre/sobre.component.html
+++ b/src/app/components/pages/sobre/sobre.component.html
@@ -10,5 +10,6 @@
     <p>
       A empresa oferece serviços de projetos, instalação e manutenção em equipamentos residenciais, comerciais e industriais, atendendo ao mercado de refrigeração, climatização, ventilação, exaustão e hospitalar, com qualidade e pronto atendimento.
     </p>
+    <button class="btn btn-outline-light" (click)="downloadPdf()">Baixar Portifólio</button>
   </div>  
 </div>
