--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,10 +5,10 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Helvetica, sans-serif;
+    font-family: "Raleway", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 'Open Sans', 'Helvetica Neue', sans-serif, Helvetica, sans-serif;
 }
 
 /* Defina explicitamente a largura para os elementos necessários */
-.containerPages {
-    width: 100vw; /* Para garantir que ocupa toda a viewport */
+#fullpages {
+    
 }
